Revert "Revert "fixed textarea border-radius on mobile (this one worked)""
This reverts commit 14b0323a30f9db863db76a1c010df2034e9a1a56.

--- a/src/index.css
+++ b/src/index.css
@@ -309,8 +309,8 @@ body {
   resize: none;
   border: none;
   /* remove textarea rounding */
-  border-radius: none;
-  -webkit-appearance: textarea;
+  border-radius: 0;
+  -webkit-appearance: none;
   appearance: none;
 }
 
